--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@fawazahmed/react-native-read-more": "^3.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.71.10",
@@ -36,6 +37,7 @@
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.9",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.20.2",
@@ -46,11 +48,11 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@hookform/resolvers": "^5.0.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
